[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Character/Weapons/Arrow.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/Area2D.gd" type="Script" id=2]
[ext_resource path="res://Assets/SFX/Impact.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 2.26772

[node name="Area2D" type="Area2D"]
z_index = 2
collision_layer = 256
collision_mask = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 0.785398
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.09474, 0 )
shape = SubResource( 1 )

[node name="ArrowHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Area2D_body_shape_entered"]
